# promptbook

./: README.md  docker-compose.yaml  pyproject.toml  run.sh
apps/accounts/: authentication.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_refreshtokenlog.py
apps/accounts/tests/: test_auth.py
apps/prompts/: models.py  serializers.py  urls.py  views.py
apps/prompts/migrations/: 0001_initial.py
apps/prompts/tests/: test_prompts.py
config/: settings.py  urls.py
config/settings/: base.py
